style.css
/* ... */
button:focus,
html input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus,
button:active,
html input[type="button"]:active,
input[type="reset"]:active,
input[type="submit"]:active {
	border-color: #aaa #bbb #bbb #bbb;
	box-shadow: inset 0 2px 3px rgba(0,0,0,.15);
	box-shadow: inset 0 2px 2px rgba(0,0,0,.15);
}
input[type="checkbox"],
input[type="radio"] {
	box-sizing: border-box; /* Addresses box sizing set to content-box in IE8/9 */
	padding: 0; /* Addresses excess padding in IE8/9 */
}
input[type="search"] {
	-webkit-box-sizing: content-box; /* Addresses box sizing set to border-box in S5, Chrome (include -moz to future-proof) */
	-moz-box-sizing: content-box;
	box-sizing: content-box;
	-webkit-appearance: textfield; /* Addresses appearance set to searchfield in S5, Chrome */
}
input[type="search"]::-webkit-search-decoration { /* Corrects inner padding displayed oddly in S5, Chrome on OSX */
	-webkit-appearance: none;
}
button::-moz-focus-inner,
input::-moz-focus-inner {
	padding: 0; /* Corrects inner padding and border displayed oddly in FF3/4 www.sitepen.com/blog/2008/05/14/the-devils-in-the-details-fixing-dojos-toolbar-buttons/ */
	border: 0;
}
input[type=text],
input[type=password],
input[type=email],
textarea {
	border: 1px solid #ccc;
	border-radius: 3px;
	color: #666;
}
input[type=text]:focus,
input[type=password]:focus,
input[type=email]:focus,
textarea:focus {
	color: #111;
}
input[type=text],
input[type=password],
input[type=email] {
	padding: 3px;
}
textarea {
	overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9 */
	padding-left: 3px;
	width: 95%;
	vertical-align: top; /* Improves readability and alignment in all browsers */
}

/* Links */
a {
	color: #57ad68;
	text-decoration: none;
}
a:visited {
	color: #57ad68;
	text-decoration: none;
}
a:hover,
a:focus,
a:active {
	color: #57ad68;
	text-decoration: underline;
}

/* Alignment */
.alignleft {
	display: inline;
	float: left;
	margin-right: 1.5em;
}
.alignright {
	display: inline;
	float: right;
	margin-left: 1.5em;
}
.aligncenter {
	display: block;
	clear: both;
	margin: 0 auto;
}

img.alignleft {
	margin: 5px 20px 10px 0;
}
img.alignright {
	margin: 5px 0 10px 20px;
}
img.aligncenter {
	margin: 5px auto 10px;
}

/* Text meant only for screen readers */
.assistive-text {
	position: absolute !important;
	clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
	clip: rect(1px, 1px, 1px, 1px);
}


/* =Menu
----------------------------------------------- */

.main-navigation {
	display: block;
	float: left;
	clear: both;
	width: 100%;
}
.main-navigation ul {
	margin: 0;
	padding-left: 0;
	list-style: none;
}
.main-navigation li {
	position: relative;
}
.main-navigation a {
	text-decoration: none;
	font-size: 15px;
	font-family: "Myriad Pro","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Geneva,Verdana,sans-seri;
}
.main-navigation ul ul {
	position: absolute;
	top: 1.5em;
	left: 0;
	z-index: 99999;
	display: none;
	float: left;
	-webkit-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
	-moz-box-shadow: 0 3px 3px rgba(0,0,0,0.2);
	box-shadow: 0 3px 3px rgba(0,0,0,0.2);
}
.main-navigation ul ul ul {
	top: 0;
	left: 100%;
}
.main-navigation ul ul a {
	width: 200px;
}
.main-navigation ul ul li {
}
.main-navigation li:hover > a {
	text-decoration: underline;
}
.main-navigation ul ul :hover > a {
}
.main-navigation ul ul a:hover {
}
.main-navigation ul li:hover > ul {
	display: block;
}
.main-navigation li.current_page_item a,
.main-navigation li.current-menu-item a {
}

/* =Content
----------------------------------------------- */

.site,
.entry-content {
	*zoom: 1;
}
.site:before,
.site:after,
.entry-content:before,
.entry-content:after {
	display: table;
	content: "";
	line-height: 0;
}
.site:after,
.entry-content:after {
	clear: both;
}
.site-main article.sticky {
	margin-right: -40px;
	margin-bottom: 1px;
	margin-left: -40px;
	padding-right: 40px;
	padding-left: 40px;
	background: #F2F7F9;
	border: none;
}
.site-main article:first-child.sticky {
	margin-top: 34px;
}
.hentry {
	/* margin: 0 0 1.5em; */
}
.entry-meta {
	clear: both;
}
.byline {
	display: none;
}
.single .byline,
.group-blog .byline {
	display: inline;
}
.entry-content,
.entry-summary {
	margin: 1.5em 0 0;
	color: #333326;
}
.entry-content > .sharedaddy {
	margin: 1.5em 0;
}
.page-links {
	clear: both;
	margin: 0 0 1.5em;
}

.entry-content .twitter-tweet-rendered {
	max-width: 100% !important;
}

.single .entry-content {
	padding-bottom: 20px;
}

.single article.post, .single article.page {
	margin-bottom: 40px;
}

/* =Post Formats
----------------------------------------------- */

.blog .format-aside .entry-title,
.archive .format-aside .entry-title,
.search .format-aside .entry-title,
.blog .format-status .entry-title,
.archive .format-status .entry-title,
.search .format-status .entry-title,
.blog .format-link .entry-title,
.archive .format-link .entry-title,
.search .format-link .entry-title,
.blog .format-image .entry-title,
.archive .format-image .entry-title,
.search .format-image .entry-title,
.blog .format-quote .entry-title,
.archive .format-quote .entry-title,
.search .format-quote .entry-title {
	display: none;
}

.single .format-aside h1.entry-title,
.single .format-quote h1.entry-title,
.single .format-chat h1.entry-title,
.single .format-status h1.entry-title,
.single .format-image h1.entry-title,
.single .format-link h1.entry-title,
.single .format-gallery h1.entry-title {
	font-size: 13px;
	line-height: 21px;
}

.format-aside .entry-format,
.format-quote .entry-format,
.format-chat .entry-format,
.format-status .entry-format,
.format-image .entry-format,
.format-link .entry-format,
.format-gallery .entry-format {
	color: #999;
	font-weight: 300;
}

.format-aside {
    font-size: 1.6em;
    font-style: italic;
    line-height: 1.5;
}
.format-aside .entry-content {
	margin-top: 0;
}

.format-aside .entry-title-meta {
	margin-bottom: 20px;
}
.format-aside a, .format-aside a:hover {
	color: inherit;
	text-decoration: none;
}
/* ... */

